# benteng-sdk

./: .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap_benteng.sh  check_environment.sh  verify_setup.sh  verify_setup_v2.sh
.github/workflows/: release.yml
admin-console/: package-lock.json  package.json
admin-console/src/: App.css  App.tsx
admin-console/src/components/: AuditExport.tsx  Dashboard.tsx  PolicyEditor.tsx  ReceiptBrowser.tsx
cli/: Cargo.toml
cli/src/: main.rs
devops/ebpf/: cilium-network-policy.yaml  parca-agent.yaml  tetragon-deny.yaml
edge-api/: Cargo.toml
edge-api/src/: audit_export.rs  lib.rs  main.rs  salt_rotation.rs
edge-api/tests/: integration_test.rs
formal/: AAD.Binding.fst  Envelope.Spec.fst  KDF.HKDF.Spec.fst  Makefile  Verify.Path.Spec.fst
sdk-core/: Cargo.toml
sdk-core/benches/: verify.rs
sdk-core/src/: error.rs  lib.rs  policy.rs  policy_bundle.rs
sdk-core/src/crypto/: aad.rs  aead.rs  kdf.rs  kem.rs  kms.rs  kms_storage.rs  mod.rs  sig.rs
sdk-core/src/envelope/: kms_decrypt.rs  mod.rs  operations.rs
transparency/: Cargo.toml
transparency/src/: lib.rs  witness.rs
