[package]
name = "benteng-edge-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "edge-api"
path = "src/main.rs"

[dependencies]
benteng-sdk-core = { path = "../sdk-core" }
benteng-transparency = { path = "../transparency" }
tokio.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"
ciborium = "0.2.2"
hex = "0.4.3"
sha2.workspace = true
chrono = "0.4.42"
getrandom.workspace = true
reqwest = "0.12.23"
zip = "2.2"
tempfile = "3.22.0"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
ciborium = "0.2.2"
zip = { version = "2.2", features = ["deflate"] }
