[package]
name = "benteng-transparency"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
